separate badges and profile